--- a/templates/main.html
+++ b/templates/main.html
@@ -199,7 +199,7 @@
                                             </span>
                                         </p>
                                         <p v-on:click="changeSort('updated')" :class="sort == 'updated_desc' ? 'active' : '' || sort == 'updated_asc' ? 'active' : ''">
-                                            <span>Last Updated
+                                            <span>Updated
                                                 <span class="sort__item-arrow">
                                                     <i :class="'fas fa-caret-' + convertSortIcon(sort)"></i>
                                                 </span>
