--- a/templates/dev.html
+++ b/templates/dev.html
@@ -29,7 +29,7 @@
     <script async src="https://www.googletagmanager.com/gtag/js?id=G-PZPLP7ZRTL"></script>
     <script src="/static/js/jquery.min.js"></script>
     <link href="https://rawcdn.githack.com/hung1001/font-awesome-pro/0ac23ca/css/all.css" rel="stylesheet" type="text/css" />
-    <link rel="stylesheet" type="text/css" href="/static/css/index.min.css?6828142">
+    <link rel="stylesheet" type="text/css" href="/static/css/index.css?6828142">
     <script src="https://cdn.jsdelivr.net/npm/pace-js@latest/pace.min.js"></script>
     <script>
         window.dataLayer = window.dataLayer || [];
@@ -357,7 +357,7 @@
     <script src="/static/vue_modules/vue-axios-plugin.min.js" onload="scrptloadchk += 1;"></script>
     <script src="/static/vue_modules/vue-timeago.min.js" onload="scrptloadchk += 1;"></script>
     <script src="/static/vue/mixins/generalMixins.min.js?13656742" onload="scrptloadchk += 1;"></script>
-    <script src="/static/vue/pages/index.min.js?12618421" onload="scrptloadchk += 1;"></script>
+    <script src="/static/vue/pages/index.js?1286461621" onload="scrptloadchk += 1;"></script>
     <script src="https://unpkg.com/element-ui/lib/index.js" onload="scrptloadchk += 1;"></script>
     <script>
         setTimeout(CheckLoadScript, 1000);
